k8s-apps/hegerdes-kubernetes-service/shared/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hks-gateway
  namespace: envoy-gateway
spec:
  allowedListeners:
    namespaces:
      from: Selector # can be Same, Selector, All, None
      selector:
        hks.hegerdes.com/managed-cluster: "true"
  gatewayClassName: envoy
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/location: nbg1
      load-balancer.hetzner.cloud/name: k8s-hks-gateway-lb
      load-balancer.hetzner.cloud/network: k8s-network
      load-balancer.hetzner.cloud/use-private-ip: "true"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
  listeners:
    - name: kubeapi
      protocol: TLS
      port: 6443
      hostname: "*.hks.eu-central.hegerdes.com"
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TLSRoute
      tls:
        mode: Passthrough
    - name: konnectivity
      protocol: TLS
      port: 8091
      hostname: "*.hks.eu-central.hegerdes.com"
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TLSRoute
      tls:
        mode: Passthrough
